<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:stretchColumns="1"
 >
<TableRow
    android:layout_width="wrap_content">
    <TextView
        android:text="@string/open"
        android:padding="3dip"
        android:layout_marginLeft="3dp"
      />

    <TextView
        android:layout_width="316dp"
        android:gravity="right"
        android:padding="3dip"
        android:text="@string/open_shortcut" />

</TableRow>
    <TableRow>
        <TextView
            android:text="@string/save"
            android:padding="3dip"
            android:layout_marginLeft="3dp"
            />
        <TextView
            android:text="@string/save_shortcut"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent">
        <TextView
            android:text="@string/saveas"
            android:padding="3dip"
            android:layout_marginLeft="3dp"
            />
        <TextView
            android:text="@string/saveas_shortcut"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow
        android:background="#404040" android:layout_margin="2dip"
        >
        <TextView
            android:text="@string/import_1"
            android:background="#FFFFFF"
            android:paddingTop="2dip"
            android:paddingBottom="5dip"/>
        <TextView
            android:gravity="right"
            android:background="#FFFFFF"
            android:layout_marginTop="1dip"
            android:padding="3dip" />
    </TableRow>
    <TableRow
        android:background="#404040" android:layout_margin="2dip"
        >
        <TextView
            android:text="@string/export_1"
            android:background="#FFFFFF"
            android:paddingBottom="3dip"
            android:paddingTop="3dip"/>
        <TextView
            android:text="@string/ex_shortcut"
            android:gravity="right"
            android:background="#FFFFFF"
            android:layout_marginBottom="1dip"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/Quit"
            android:layout_marginLeft="3dp"
            android:padding="3dip" />
    </TableRow>
</TableLayout>